--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                 <div class="col-md-3 col-sm-6">
                                     <div class="uni-shortcode-icon-box-1-default">
                                         <div class="item-icons">
-                                           <a href="#"> <img src="images/icons_box/icon_1/icon-5.png" alt="" class="img-responsive">
+                                           <a href="#"> <img src="images/icons_box/icon_1/icon11.png" alt="" class="img-responsive">
                                         </div>
                                         <div class="item-caption">
                                             <h4>General Surgery</h4>
@@ -401,7 +401,7 @@
                                 <div class="col-md-3 col-sm-6">
                                     <div class="uni-shortcode-icon-box-1-default">
                                         <div class="item-icons">
-                                           <a href="#">  <img src="images/icons_box/icon_1/icon-4.png" alt="" class="img-responsive">
+                                           <a href="#">  <img src="images/icons_box/icon_1/icon-6.png" alt="" class="img-responsive">
                                         </div>
                                         <div class="item-caption">
                                             <h4>Urology</h4>
@@ -424,7 +424,7 @@
                                  <div class="col-md-3 col-sm-6">
                                     <div class="uni-shortcode-icon-box-1-default">
                                         <div class="item-icons">
-                                            <a href="#">   <img src="images/icons_box/icon_1/icon-7.png" alt="" class="img-responsive">
+                                            <a href="#">   <img src="images/icons_box/icon_1/icon-4.png" alt="" class="img-responsive">
                                         </div>
                                         <div class="item-caption">
                                             <h4>Neuro Surgery</h4>
@@ -597,7 +597,7 @@
                                         <div class="item-icons-title">
                                             <div class="col-md-4 uni-clear-padding">
                                                 <div class="item-icons">
-                                                    <img src="images/icons_box/icon_4/icon-5.png" alt="">
+                                                    <img src="images/icons_box/icon_1/icon-7.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="col-md-8 uni-clear-padding">
@@ -619,7 +619,7 @@
                                         <div class="item-icons-title">
                                             <div class="col-md-4 uni-clear-padding">
                                                 <div class="item-icons">
-                                                    <img src="images/icons_box/icon_4/icon-4.png" alt="">
+                                                    <img src="images/icons_box/icon_1/icon4.png" style="height: 50px;" alt="">
                                                 </div>
                                             </div>
                                             <div class="col-md-8 uni-clear-padding">
@@ -641,7 +641,7 @@
                                         <div class="item-icons-title">
                                             <div class="col-md-4 uni-clear-padding">
                                                 <div class="item-icons">
-                                                    <img src="images/icons_box/icon_4/icon-3.png" alt="">
+                                                    <img src="images/icons_box/icon_1/icon13.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="col-md-8 uni-clear-padding">
@@ -663,7 +663,7 @@
                                         <div class="item-icons-title">
                                             <div class="col-md-4 uni-clear-padding">
                                                 <div class="item-icons">
-                                                    <img src="images/icons_box/icon_4/icon-2.png" alt="">
+                                                    <img src="images/icons_box/icon_1/xray.png" style="height: 50px;" alt="">
                                                 </div>
                                             </div>
                                             <div class="col-md-8 uni-clear-padding">
@@ -686,7 +686,7 @@
                                         <div class="item-icons-title">
                                             <div class="col-md-4 uni-clear-padding">
                                                 <div class="item-icons">
-                                                    <img src="images/icons_box/icon_4/icon-1.png" alt="">
+                                                    <img src="images/icons_box/icon_1/icon-10.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="col-md-8 uni-clear-padding">
@@ -709,7 +709,7 @@
                                         <div class="item-icons-title">
                                             <div class="col-md-4 uni-clear-padding">
                                                 <div class="item-icons">
-                                                    <img src="images/icons_box/icon_4/icon.png" alt="">
+                                                    <img src="images/icons_box/icon_1/icon-2.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="col-md-8 uni-clear-padding">
