--- a/services.html
+++ b/services.html
@@ -212,7 +212,7 @@
                                             <div class="item-icons-title">
                                                 <div class="col-md-4 uni-clear-padding">
                                                     <div class="item-icons">
-                                                        <img src="images/icons_box/icon_4/icon-5.png" alt="">
+                                                        <img src="images/icons_box/icon_1/icon-7.png" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-8 uni-clear-padding">
@@ -234,7 +234,7 @@
                                             <div class="item-icons-title">
                                                 <div class="col-md-4 uni-clear-padding">
                                                     <div class="item-icons">
-                                                        <img src="images/icons_box/icon_4/icon-4.png" alt="">
+                                                        <img src="images/icons_box/icon_1/icon4.png" style="height: 50px;" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-8 uni-clear-padding">
@@ -256,7 +256,7 @@
                                             <div class="item-icons-title">
                                                 <div class="col-md-4 uni-clear-padding">
                                                     <div class="item-icons">
-                                                        <img src="images/icons_box/icon_4/icon-3.png" alt="">
+                                                        <img src="images/icons_box/icon_1/icon13.png" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-8 uni-clear-padding">
@@ -279,7 +279,7 @@
                                             <div class="item-icons-title">
                                                 <div class="col-md-4 uni-clear-padding">
                                                     <div class="item-icons">
-                                                        <img src="images/icons_box/icon_4/icon-2.png" alt="">
+                                                        <img src="images/icons_box/icon_1/xray.png" style="height: 50px;" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-8 uni-clear-padding">
@@ -302,7 +302,7 @@
                                             <div class="item-icons-title">
                                                 <div class="col-md-4 uni-clear-padding">
                                                     <div class="item-icons">
-                                                        <img src="images/icons_box/icon_4/icon-1.png" alt="">
+                                                        <img src="images/icons_box/icon_1/icon-10.png" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-8 uni-clear-padding">
@@ -325,7 +325,7 @@
                                             <div class="item-icons-title">
                                                 <div class="col-md-4 uni-clear-padding">
                                                     <div class="item-icons">
-                                                        <img src="images/icons_box/icon_4/icon.png" alt="">
+                                                        <img src="images/icons_box/icon_1/icon-2.png" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-8 uni-clear-padding">
@@ -349,7 +349,7 @@
                                             <div class="item-icons-title">
                                                 <div class="col-md-4 uni-clear-padding">
                                                     <div class="item-icons">
-                                                        <img src="images/icons_box/icon_4/icon.png" alt="">
+                                                        <img src="images/icons_box/icon_1/icon11.png"  style="height: 50px;"alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-8 uni-clear-padding">
@@ -372,7 +372,7 @@
                                             <div class="item-icons-title">
                                                 <div class="col-md-4 uni-clear-padding">
                                                     <div class="item-icons">
-                                                        <img src="images/icons_box/icon_4/icon.png" alt="">
+                                                        <img src="images/icons_box/icon_1/icon14.png"  style="height: 50px;" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-8 uni-clear-padding">
@@ -395,7 +395,7 @@
                                             <div class="item-icons-title">
                                                 <div class="col-md-4 uni-clear-padding">
                                                     <div class="item-icons">
-                                                        <img src="images/icons_box/icon_4/icon.png" alt="">
+                                                        <img src="images/icons_box/icon_1/icon-11.png"  style="height: 50px;"alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-8 uni-clear-padding">
