--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
                                             <div class="col-md-9 col-sm-9 col-xs-9 uni-clear-padding">
                                                 <div class="item-title">
                                                     <h4>Dr Adil Mehmood</h4>
-                                                    <span>anesthesiologist</span>
+                                                    <span>anesthetist</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -345,7 +345,7 @@
                                             <div class="col-md-9 col-sm-9 col-xs-9 uni-clear-padding">
                                                 <div class="item-title">
                                                     <h4>Dr Muhammad Javaid</h4>
-                                                    <span>Assistant Professor</span>
+                                                    <span>ENT Nose</span>
                                                 </div>
                                             </div>
                                         </div>
