--- a/doctor.html
+++ b/doctor.html
@@ -286,7 +286,7 @@
                                                                     <div class="col-md-9 col-sm-9 col-xs-9 uni-clear-padding">
                                                                         <div class="item-title">
                                                                             <h4>dr adil mehmood</h4>
-                                                                            <span>Anesthesiologist</span>
+                                                                            <span>Anesthetist</span>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -469,7 +469,7 @@
                                                                     <div class="col-md-9 col-sm-9 col-xs-9 uni-clear-padding">
                                                                         <div class="item-title">
                                                                             <h4>dr muhammad javaid</h4>
-                                                                            <span>assistant professor</span>
+                                                                            <span>ENT Nose</span>
                                                                         </div>
                                                                     </div>
                                                                 </div>
