--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                                             <div class="col-md-9 col-sm-9 col-xs-9 uni-clear-padding">
                                                 <div class="item-title">
                                                     <h4>Dr Adil Mehmood</h4>
-                                                    <span>anesthesiologist</span>
+                                                    <span>anesthestist</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -549,7 +549,7 @@
                                             <div class="col-md-9 col-sm-9 col-xs-9 uni-clear-padding">
                                                 <div class="item-title">
                                                     <h4>Dr Muhammad Javaid</h4>
-                                                    <span>Assistant Professor</span>
+                                                    <span>ENT Nose</span>
                                                 </div>
                                             </div>
                                         </div>
