--- a/doctor.html
+++ b/doctor.html
@@ -583,7 +583,7 @@
                                                                     </div>
                                                                     <div class="col-md-9 col-sm-9 col-xs-9 uni-clear-padding">
                                                                         <div class="item-title">
-                                                                            <h4>dr Gharat khan</h4>
+                                                                            <h4>dr Ghairat khan</h4>
                                                                             <span>Orthopedic surgeon</span>
                                                                         </div>
                                                                     </div>
