--- a/doctor.html
+++ b/doctor.html
@@ -509,6 +509,66 @@
                                                                 </div>
                                                             </div>
                                                         </div>
+                                                         </div><div class="col-md-3 col-sm-6">
+                                                        <div class="uni-our-doctor-item-default">
+                                                            <div class="item-img">
+                                                                <a href="#"><img src="images/team/WhatsApp Image 2021-09-21 at 2.30.53 PM.jpeg" style="height: 265px;" alt="" class="img-responsive"></a>
+                                                            </div>
+                                                            <div class="item-caption">
+                                                                <div class="item-caption-head">
+                                                                    <div class="col-md-3 col-sm-3 col-xs-3 uni-clear-padding">
+                                                                        <div class="item-icons">
+                                                                            <img src="images/icons_box/icon_1/icon-4.png" alt="">
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="col-md-9 col-sm-9 col-xs-9 uni-clear-padding">
+                                                                        <div class="item-title">
+                                                                            <h4>dr Liaquat Ali Shah</h4>
+                                                                            <span>Surgical Specialist</span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="item-caption-info">
+                                                                    <table class="table">
+                                                                        <thead>
+                                                                        <tr>
+                                                                            <td>Degrees</td>
+                                                                            <td> MBBS, FCPS, MCPS </td>
+                                                                        </tr>
+                                                                        </thead>
+                                                                        <tbody>
+                                                                        <tr>
+                                                                            <td>Mon - fri</td>
+                                                                            <td>8:00 am - 17:00 pm</td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <td>saturday</td>
+                                                                            <td>10:00 am - 15:00 pm</td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <td>Sunday</td>
+                                                                            <td>8:00 am - 12:00 pm</td>
+                                                                        </tr>
+                                                                        </tbody>
+                                                                        <tfoot>
+                                                                        <tr>
+                                                                            <td colspan="2">
+                                                                                <ul>
+                                                                                    <li>
+                                                                                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                                                    </li>
+                                                                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                                                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                                                                    <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                                                                                </ul>
+                                                                            </td>
+                                                                        </tr>
+                                                                        </tfoot>
+                                                                    </table>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                     </div><div class="col-md-3 col-sm-6">
                                                         <div class="uni-our-doctor-item-default">
                                                             <div class="item-img">
