--- a/doctor.html
+++ b/doctor.html
@@ -569,7 +569,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    </div><div class="col-md-3 col-sm-6">
+                                                    <div class="col-md-3 col-sm-6">
                                                         <div class="uni-our-doctor-item-default">
                                                             <div class="item-img">
                                                                 <a href="#"><img src="images/team/img1.png" style="height: 265px;" alt="" class="img-responsive"></a>
